project('Chat_client-server', 'cpp')

# Directories
src_dir = 'src'
tests_dir = 'tests'
bin_dir = meson.current_build_dir() / 'bin'

# Create the executables in the 'bin' folder
mainClient_executable = executable(bin_dir / 'mainClient', src_dir / 'mainClient.cpp')
mainServer_executable = executable(bin_dir / 'mainServer', src_dir / 'mainServer.cpp')
